Fix alignment in about

--- a/server/assets/marketing/css/routes/about.css
+++ b/server/assets/marketing/css/routes/about.css
@@ -1,7 +1,7 @@
 #marketing-about {
   display: flex;
   flex-direction: column;
-  align-items: stretch;
+  align-items: center;
   gap: var(--noora-spacing-0);
 
   @media (min-width: 1024px) {
